Catch invalid resource state with an error instead of crashing. Real reason for getting into this state yet unknown, but this behavior is more acceptable.

BUG: 178220

svn path=/trunk/KDE/kdepim/akonadi/; revision=911612